tests/integration/errors/undeclared-identifier.it
Undeclared Identifier

- compilation error
=========
void main() {
    int b;
    a = 2;
    b = a;
    b = a[2];
    a[2] = b;
}
=========
<stdin>:3: error: use of undeclared identifier 'a'
<stdin>:4: error: use of undeclared identifier 'a'
<stdin>:5: error: use of undeclared identifier 'a'
<stdin>:6: error: use of undeclared identifier 'a'
